--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ ul {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
 
   color: var(--dark-color);
 }
